--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>VTCC Regimental Orders. WIP</P>
-  <p> <a href"vtcc-ros/POD-HTML.htm"> Current Plan of the Day</a>
+  <p>VTCC Regimental Orders. WIP
+    <a href"vtcc-ros/POD-HTML.htm"> Current Plan of the Day</a>
   </p>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
