--- a/POD-HTML.htm
+++ b/POD-HTML.htm
@@ -1170,18 +1170,18 @@ style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   <td width=576 colspan=6 valign=top style='width:6.0in;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>ALL
-  CADETS:<span style='mso-spacerun:yes'>  </span>If after the fall semester you
+  CADETS:<span style='mso-spacerun:yes'>Â  </span>If after the fall semester you
   are changing leadership tracks from ROTC to VPI, or from VPI to ROTC, you need
   to contact Lt Col Russell ASAP (druss135@vt.edu) to initiate the track change
-  checklist process.<span style='mso-spacerun:yes'>  </span>Delaying this
-  transition causes administrative ripple effects, delays one’s academic and
-  career development, and reflects poorly on one’s ability to manage and
+  checklist process.<span style='mso-spacerun:yes'>Â  </span>Delaying this
+  transition causes administrative ripple effects, delays one's academic and
+  career development, and reflects poorly on one's ability to manage and
   prioritize.<o:p></o:p></span></p>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>ALL
   CADETS: The Tailor Shop will be closed on Monday, 21 January as the
   University is officially closed for observance of Martin Luther King, Jr.
-  Day.<span style='mso-spacerun:yes'>   </span>For those cadets seeking rank
+  Day.<span style='mso-spacerun:yes'>Â Â  </span>For those cadets seeking rank
   insignia for the 2019 Spring semester or retrieve their Blue Blouse with
   amended rank, they can do so when the Tailor Shop opens at 0800, Tuesday, 22
   January.<o:p></o:p></span></p>
