--- a/POD-HTML.htm
+++ b/POD-HTML.htm
@@ -23,7 +23,6 @@ w\:* {behavior:url(#default#VML);}
 <link rel=colorSchemeMapping href="POD-HTML_files/colorschememapping.xml">
 <!--[if gte mso 9]><xml>
  <w:WordDocument>
-  <w:View>Print</w:View>
   <w:Zoom>90</w:Zoom>
   <w:SpellingState>Clean</w:SpellingState>
   <w:GrammarState>Clean</w:GrammarState>
@@ -682,6 +681,20 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 	font-family:"Times New Roman",serif;
 	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:minor-fareast;}
+a:link, span.MsoHyperlink
+	{mso-style-noshow:yes;
+	mso-style-priority:99;
+	color:#0563C1;
+	mso-themecolor:hyperlink;
+	text-decoration:underline;
+	text-underline:single;}
+a:visited, span.MsoHyperlinkFollowed
+	{mso-style-noshow:yes;
+	mso-style-priority:99;
+	color:#954F72;
+	mso-themecolor:followedhyperlink;
+	text-decoration:underline;
+	text-underline:single;}
 p
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
@@ -723,6 +736,9 @@ span.HeaderChar
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:"Times New Roman";
 	mso-bidi-font-family:"Times New Roman";}
+span.SpellE
+	{mso-style-name:"";
+	mso-spl-e:yes;}
 .MsoChpDefault
 	{mso-style-type:export-only;
 	mso-default-props:yes;
@@ -782,7 +798,7 @@ table.MsoTableGrid
  </o:shapelayout></xml><![endif]-->
 </head>
 
-<body lang=EN-US style='tab-interval:.5in'>
+<body lang=EN-US link="#0563C1" vlink="#954F72" style='tab-interval:.5in'>
 
 <div class=WordSection1>
 
@@ -792,12 +808,27 @@ table.MsoTableGrid
  style='width:7.5in;border-collapse:collapse;mso-yfti-tbllook:1184;mso-padding-alt:
  0in 0in 0in 0in'>
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes'>
+  <td width=720 colspan=3 style='width:7.5in;padding:0in 5.75pt 0in 5.75pt'>
+  <p class=MsoHeader><span style='font-size:10.0pt;mso-bidi-font-size:8.0pt;
+  font-family:"Georgia",serif;color:#767171;mso-themecolor:background2;
+  mso-themeshade:128;mso-style-textfill-fill-color:#767171;mso-style-textfill-fill-themecolor:
+  background2;mso-style-textfill-fill-alpha:100.0%;mso-style-textfill-fill-colortransforms:
+  lumm=50000;mso-no-proof:yes'><a href="https://vtcc-ros.github.io/POD-HTML.htm"><span
+  style='color:#767171;mso-themecolor:background2;mso-themeshade:128;
+  mso-style-textfill-fill-color:#767171;mso-style-textfill-fill-themecolor:
+  background2;mso-style-textfill-fill-alpha:100.0%;mso-style-textfill-fill-colortransforms:
+  lumm=50000'>View the Regimental Orders in your browser</span></a><o:p></o:p></span></p>
+  <p class=MsoHeader><span style='font-size:8.0pt;font-family:"Georgia",serif;
+  mso-no-proof:yes'><o:p>&nbsp;</o:p></span></p>
+  </td>
+ </tr>
+ <tr style='mso-yfti-irow:1'>
   <td width=144 rowspan=4 style='width:1.5in;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoHeader align=center style='text-align:center'><span
   style='font-size:8.0pt;font-family:"Georgia",serif;mso-no-proof:yes'><img
-  width=115 height=127 id="_x0000_i1026"
-  src="https://vtccros.files.wordpress.com/2019/01/image003-e1547755863777.png"
-  alt=vtcc></span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
+  border=0 width=115 height=127 id="_x0000_i1026"
+  src="https://vtcc-ros.github.io/image003-e1547755863777.png" alt=vtcc></span><span
+  style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   </td>
   <td width=432 valign=top style='width:4.5in;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoHeader align=center style='text-align:center'><span
@@ -810,19 +841,19 @@ table.MsoTableGrid
   <td width=144 rowspan=4 style='width:1.5in;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoHeader align=center style='text-align:center'><span
   style='font-size:8.0pt;font-family:"Georgia",serif;mso-no-proof:yes'><img
-  width=126 height=127 id="_x0000_i1025"
-  src="https://vtccros.files.wordpress.com/2019/01/image002.png" alt=vt></span><span
+  border=0 width=126 height=127 id="_x0000_i1025"
+  src="https://vtcc-ros.github.io/image002.png" alt=vt></span><span
   style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   </td>
  </tr>
- <tr style='mso-yfti-irow:1'>
+ <tr style='mso-yfti-irow:2'>
   <td width=432 valign=top style='width:4.5in;padding:0in 5.75pt 0in 5.75pt'>
   <p class=MsoHeader align=center style='text-align:center'><b><span
   style='font-size:22.0pt;font-family:"Georgia",serif'>PLAN OF THE DAY</span></b><span
   style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   </td>
  </tr>
- <tr style='mso-yfti-irow:2;height:51.7pt'>
+ <tr style='mso-yfti-irow:3;height:51.7pt'>
   <td width=432 valign=top style='width:4.5in;padding:0in 5.75pt 0in 5.75pt;
   height:51.7pt'>
   <p class=MsoHeader align=center style='text-align:center'><span class=style2><span
@@ -833,11 +864,11 @@ table.MsoTableGrid
   style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   </td>
  </tr>
- <tr style='mso-yfti-irow:3;height:1.0pt'>
+ <tr style='mso-yfti-irow:4;height:1.0pt'>
   <td width=432 valign=top style='width:4.5in;padding:0in 5.75pt 0in 5.75pt;
   height:1.0pt'></td>
  </tr>
- <tr style='mso-yfti-irow:4;mso-yfti-lastrow:yes'>
+ <tr style='mso-yfti-irow:5;mso-yfti-lastrow:yes'>
   <td width=720 colspan=3 valign=top style='width:7.5in;padding:0in 0in 0in 0in'>
   <p class=MsoHeader align=center style='text-align:center'><u><span
   style='font-size:18.0pt;font-family:"Georgia",serif'>VIRGINIA TECH CORPS OF
@@ -928,12 +959,12 @@ table.MsoTableGrid
   Wagner, Drew</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>Color
   Guard</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
-  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/SGT
-  Bugler</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
-  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/CPT
-  Commander</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
-  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/CPT
-  Another Guy</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
+  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/
+  Stephens</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
+  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/
+  <span class=SpellE>Formella</span></span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
+  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/
+  Braford</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:2;mso-yfti-lastrow:yes;page-break-inside:avoid'>
@@ -1084,7 +1115,11 @@ style='font-family:"Cambria",serif'><o:p></o:p></span></p>
  </tr>
  <tr style='mso-yfti-irow:2;page-break-inside:avoid'>
   <td width=90 valign=top style='width:67.25pt;padding:0in 5.4pt 0in 5.4pt'>
-  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>OOD:</span><span
+  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif;
+  color:black;mso-themecolor:text1'><a
+  href="https://docs.google.com/spreadsheets/d/1PF13KIU665RgEGtNsBaiKPaenX8tpoabclM8JnJgm-8/edit?usp=sharing"><span
+  style='color:black;mso-themecolor:text1;text-decoration:none;text-underline:
+  none'>OOD</span></a></span><span style='font-size:10.0pt;font-family:"Georgia",serif'>:</span><span
   style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>Flag
   Detail:</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
@@ -1100,12 +1135,12 @@ style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   Hatcher, Louis</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>Color
   Guard</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
-  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/SGT
-  Bugler</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
-  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/CPT
-  Commander</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
-  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/CPT
-  Person</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
+  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/
+  Murphy</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
+  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/
+  <span class=SpellE>DiBiaso</span></span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
+  <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>C/
+  Bourdon</span><span style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   </td>
   <td width=72 valign=top style='width:.75in;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal align=right style='text-align:right'><span
@@ -1170,18 +1205,18 @@ style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   <td width=576 colspan=6 valign=top style='width:6.0in;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>ALL
-  CADETS:<span style='mso-spacerun:yes'>Â  </span>If after the fall semester you
-  are changing leadership tracks from ROTC to VPI, or from VPI to ROTC, you need
-  to contact Lt Col Russell ASAP (druss135@vt.edu) to initiate the track change
-  checklist process.<span style='mso-spacerun:yes'>Â  </span>Delaying this
-  transition causes administrative ripple effects, delays one's academic and
-  career development, and reflects poorly on one's ability to manage and
+  CADETS:<span style='mso-spacerun:yes'>  </span>If after the fall semester you
+  are changing leadership tracks from ROTC to VPI, or from VPI to ROTC, you
+  need to contact Lt Col Russell ASAP (druss135@vt.edu) to initiate the track
+  change checklist process.<span style='mso-spacerun:yes'>  </span>Delaying
+  this transition causes administrative ripple effects, delays one’s academic
+  and career development, and reflects poorly on one’s ability to manage and
   prioritize.<o:p></o:p></span></p>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif'>ALL
   CADETS: The Tailor Shop will be closed on Monday, 21 January as the
   University is officially closed for observance of Martin Luther King, Jr.
-  Day.<span style='mso-spacerun:yes'>Â Â  </span>For those cadets seeking rank
+  Day.<span style='mso-spacerun:yes'>   </span>For those cadets seeking rank
   insignia for the 2019 Spring semester or retrieve their Blue Blouse with
   amended rank, they can do so when the Tailor Shop opens at 0800, Tuesday, 22
   January.<o:p></o:p></span></p>
