--- a/POD-HTML.htm
+++ b/POD-HTML.htm
@@ -1117,7 +1117,7 @@ style='font-family:"Cambria",serif'><o:p></o:p></span></p>
   <td width=90 valign=top style='width:67.25pt;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Georgia",serif;
   color:black;mso-themecolor:text1'><a
-  href="https://docs.google.com/spreadsheets/d/1PF13KIU665RgEGtNsBaiKPaenX8tpoabclM8JnJgm-8/edit?usp=sharing"><span
+  href="https://tinyurl.com/yd56s8kh"><span
   style='color:black;mso-themecolor:text1;text-decoration:none;text-underline:
   none'>OOD</span></a></span><span style='font-size:10.0pt;font-family:"Georgia",serif'>:</span><span
   style='font-family:"Cambria",serif'><o:p></o:p></span></p>
