--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body style="background-color:#2C313F;">
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>VTCC Regimental Orders. WIP
-    <a href="POD-HTML.htm"> Current Plan of the Day</a>
+  <p style="color:white;" >VTCC Regimental Orders. WIP</p>
+  <p>
+    <a style="color:white;" href="POD-HTML.htm"> Current Plan of the Day</a>
   </p>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
