Updates to Index
Added photo, changed colors/fonts.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,24 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p style="color:white;" >VTCC Regimental Orders. WIP</p>
+  <div style="font-family:georgia;">
+  <p style="color:#AF1D1D;text-align:center;" >
+    <font size="24">VTCC Regimental Orders. WIP</font>
+  </p>
+
+  <img src="coverphoto.jpg" height="960" width="575" title="Sunrise on the VT"
+  alt="Sunrise on the VT. From the Commandant's facebook page." class="centerImage opaque">
+  <div style="text-align:center;">
   <p>
     <a style="color:white;" href="POD-HTML.htm"> Current Plan of the Day</a>
   </p>
+  <p>
+    <a style="color:white;" href=""> Current Regimental Read</a>
+  </p>
+</div>
+</div>
+
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
