--- a/index.html
+++ b/index.html
@@ -23,22 +23,29 @@
 
   <!-- Add your site or application content here -->
   <div style="font-family:georgia;">
-  <p style="color:#AF1D1D;text-align:center;" >
-    <font size="24">VTCC Regimental Orders. WIP</font>
-  </p>
-
-  <img src="coverphoto.jpg" height="960" width="575" title="Sunrise on the VT"
-  alt="Sunrise on the VT. From the Commandant's facebook page." class="centerImage opaque">
-  <div style="text-align:center;">
-  <p>
-    <a style="color:white;" href="POD-HTML.htm"> Current Plan of the Day</a>
-  </p>
-  <p>
-    <a style="color:white;" href=""> Current Regimental Read</a>
+  <p style="color:#AF1D1D;text-align:center;font-size:350%;" >
+    <strong>
+        VTCC Regimental Orders
+    </strong>
   </p>
 </div>
+<div class="container center">
+  <img src="coverphoto.jpg" width="960" height="575" title="Sunrise on the VT"
+  alt="Sunrise on the VT. From the Commandant's facebook page." class="opaque imgScale">
+  <div class="imgTopLeft">
+  <a style="color:white;font-family:georgia;font-size:125%" href="POD-HTML.htm"> Current Plan of the Day</a>
+    <br>
+    <br>
+    <a style="color:white;font-family:georgia;font-size:125%" href=""> Current Regimental Read</a>
 </div>
-
+</div>
+<div>
+  <p style="font-family:georgia;color:#AF1D1D;text-align:center;font-size:175%;">
+    <em>
+        Request an Announcement in the RO's:
+    </em>
+  </p>
+</div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
