--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         VTCC Regimental Orders
     </strong>
   </p>
+  <p style="text-align:center;">
+  <a style="color:#AF1D1D;font-size:175%" href="https://goo.gl/forms/w0TwJWoIoa80CuzJ2">
+    <em>Request an Announcement in the RO's</em></a>
+  </p>
 </div>
 <div class="container center">
   <img src="coverphoto.jpg" width="960" height="575" title="Sunrise on the VT"
@@ -36,15 +40,8 @@
   <a style="color:white;font-family:georgia;font-size:125%" href="POD-HTML.htm"> Current Plan of the Day</a>
     <br>
     <br>
-    <a style="color:white;font-family:georgia;font-size:125%" href=""> Current Regimental Read</a>
+    <a style="color:white;font-family:georgia;font-size:125%" href="READ-HTML.htm"> Current Regimental Read</a>
 </div>
-</div>
-<div>
-  <p style="font-family:georgia;color:#AF1D1D;text-align:center;font-size:175%;">
-    <em>
-        Request an Announcement in the RO's:
-    </em>
-  </p>
 </div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
