--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132849951-1"></script>
 <script>
@@ -24,7 +24,7 @@
 
   gtag('config', 'UA-132849951-1');
 </script>
-  
+
 </head>
 
 <body style="background-color:#2C313F;">
@@ -52,6 +52,9 @@
     <br>
     <br>
     <a style="color:white;font-family:georgia;font-size:125%" href="READ-HTML.htm"> Current Regimental Read</a>
+    <br>
+    <br>
+    <a style="color:white;font-family:georgia;font-size:125%" href="index2.htm"> Organization Announcements and Development Opportunities</a>
 </div>
 </div>
 
