--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <a style="color:white;font-family:georgia;font-size:125%" href="READ-HTML.htm"> Current Regimental Read</a>
     <br>
     <br>
-    <a style="color:white;font-family:georgia;font-size:125%" href="index2.htm"> Organization Announcements and Development Opportunities</a>
+    <a style="color:white;font-family:georgia;font-size:125%" href="index2.htm"> Organization & Development Opportunities</a>
 </div>
 </div>
 
