--- a/index2.htm
+++ b/index2.htm
@@ -25,7 +25,7 @@
   gtag('config', 'UA-132849951-1');
 </script>
 
-<script src="jquery.js"></script>
+<script src="jquery-3.3.1.min.js"></script>
     <script>
     $(function(){
       $("#includedContent").load("POD-HTML.htm");
