--- a/dayPlan.htm
+++ b/dayPlan.htm
@@ -28,7 +28,7 @@
 <script src="js/vendor/jquery-3.3.1.min.js"></script>
     <script>
     $(function(){
-      $("#includedContent").load("https://vtcc-ros.github.io/POD-HTML.htm");
+      $("#includedContent").load("POD-HTML.htm");
     });
     </script>
 
@@ -41,6 +41,7 @@
 
   <!-- Add your site or application content here -->
   <div id="includedContent"></div>
+  <div> <iframe width="100%" height="842" src="POD-HTML.htm"></iframe></div>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
