--- a/regiRead.htm
+++ b/regiRead.htm
@@ -28,7 +28,7 @@
 <script src="js/vendor/jquery-3.3.1.min.js"></script>
     <script>
     $(function(){
-      $("#includedContent").load("https://vtcc-ros.github.io/READ-HTML.htm");
+      $("#includedContent").load("READ-HTML.htm");
     });
     </script>
 
